[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/graph/buttons/ACS-1.png" type="Texture" id=1]
[ext_resource path="res://assets/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/graph/buttons/ACS-selected-1.png" type="Texture" id=3]
[ext_resource path="res://assets/graph/buttons/ACE-1.png" type="Texture" id=4]
[ext_resource path="res://assets/graph/buttons/ACE-selected-1.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/bottom_screen.svg" type="Texture" id=6]
[ext_resource path="res://assets/UI/button/left-arrow.png" type="Texture" id=7]
[ext_resource path="res://assets/graph/cercles/CEI.png" type="Texture" id=8]
[ext_resource path="res://assets/graph/buttons/ACE-SOON.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/button/IconGear.png" type="Texture" id=10]
[ext_resource path="res://assets/graph/buttons/Fosl-selected.png" type="Texture" id=11]
[ext_resource path="res://assets/graph/buttons/Fosl.png" type="Texture" id=12]
[ext_resource path="res://scenes/GameMode/game_mode.gd" type="Script" id=13]
[ext_resource path="res://fonts/Comfortaa/Comfortaa-Regular.ttf" type="DynamicFontData" id=14]

[sub_resource type="DynamicFont" id=1]
size = 200
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 14 )

[node name="game_mode" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.16235
margin_right = 6.16235
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.864
margin_left = 1.0
margin_top = 183.0
margin_right = -12.0
margin_bottom = -1577.84
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Cat√©gories"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Fossile" type="Button" parent="title"]
margin_left = 145.0
margin_top = 442.451
margin_right = 1236.0
margin_bottom = 787.451
flat = true

[node name="TextureButton" type="TextureButton" parent="title/Fossile"]
anchor_left = -3.9
anchor_top = -16.3
anchor_right = 32.089
anchor_bottom = -16.3
margin_left = 4254.9
margin_top = 5623.5
margin_right = -33833.1
margin_bottom = 6799.5
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="title/Fossile/TextureButton"]
anchor_left = 1.0
anchor_right = 3.184
anchor_bottom = 1.01
margin_left = 24.0
margin_right = -1684.38
margin_bottom = -795.76
rect_scale = Vector2( 3, 3 )
mouse_filter = 1
custom_fonts/font = ExtResource( 2 )
text = "Affone les fossilles
"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ACS" type="Button" parent="title"]
margin_left = 145.0
margin_top = 913.0
margin_right = 1236.0
margin_bottom = 1258.0
flat = true

[node name="TextureButton" type="TextureButton" parent="title/ACS"]
anchor_left = -3.9
anchor_top = -16.3
anchor_right = 32.089
anchor_bottom = -16.3
margin_left = 4254.9
margin_top = 5623.5
margin_right = -33833.1
margin_bottom = 6799.5
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="title/ACS/TextureButton"]
anchor_left = 1.0
anchor_right = 3.184
anchor_bottom = 1.01
margin_left = 24.0
margin_right = -1690.38
margin_bottom = -795.76
rect_scale = Vector2( 3, 3 )
custom_fonts/font = ExtResource( 2 )
text = "Affone avec l'ACS"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ACE" type="Control" parent="title"]
margin_left = 144.566
margin_top = 1413.06
margin_right = 184.566
margin_bottom = 1453.06
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="title/ACE"]
anchor_left = -3.9
anchor_top = -16.3
anchor_right = 32.089
anchor_bottom = -16.3
margin_left = 156.0
margin_top = 652.0
margin_right = -107.56
margin_bottom = 1828.0
rect_scale = Vector2( 0.3, 0.3 )
disabled = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_disabled = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="title/ACE/TextureButton"]
anchor_left = 1.0
anchor_right = 3.184
anchor_bottom = 1.01
margin_left = 165.0
margin_top = 3.69312
margin_right = -1602.38
margin_bottom = -788.067
rect_scale = Vector2( 3, 3 )
custom_fonts/font = ExtResource( 2 )
text = "Affone avec l'ACE"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom_screen" type="TextureRect" parent="."]
modulate = Color( 1, 0.831373, 0.164706, 1 )
anchor_right = 1.004
anchor_bottom = 1.03
margin_left = 1.0
margin_top = 1769.0
margin_right = 0.23999
margin_bottom = 0.202881
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo CEI" type="Sprite" parent="."]
position = Vector2( 1024.49, 2117.06 )
rotation = 0.338594
scale = Vector2( 0.207, 0.207 )
texture = ExtResource( 8 )

[node name="back" type="Button" parent="."]
margin_left = 36.0198
margin_top = 80.0
margin_right = 914.02
margin_bottom = 885.706
rect_scale = Vector2( 0.24, 0.24 )
icon = ExtResource( 7 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="Button" parent="."]
anchor_right = 1.0
margin_left = 1154.0
margin_top = 40.0
margin_right = 905.0
margin_bottom = 1200.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.24, 0.24 )
icon = ExtResource( 10 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="title/Fossile" to="." method="_on_Fossile_pressed"]
[connection signal="pressed" from="title/Fossile/TextureButton" to="." method="_on_Fossile_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
